fixed image responsiveness on mobile

--- a/style.css
+++ b/style.css
@@ -49,10 +49,10 @@ h5 {
 }
 
 #portfolio-image {
-    width: 30rem;
-    margin-bottom: 1rem;
-    
+    width: 100%;
+    margin-bottom: 1rem; 
 }
+
 
 
 footer {
